<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/background_app"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_add_task"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"/>

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_todo_business_category"
            android:checked="true"
            android:textColor="@color/white"
            android:buttonTint="@color/todo_business_category"/>

        <RadioButton
            android:id="@+id/rdPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_todo_personal_category"
            android:textColor="@color/white"
            android:buttonTint="@color/todo_personal_category"/>

        <RadioButton
            android:id="@+id/rdOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_todo_other_category"
            android:textColor="@color/white"
            android:buttonTint="@color/todo_other_category"/>
    </RadioGroup>
    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_new_task"
        android:backgroundTint="@color/todo_accent"/>

</LinearLayout>